--- a/Glue/Base.lproj/Main.storyboard
+++ b/Glue/Base.lproj/Main.storyboard
@@ -541,21 +541,52 @@
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="APPCODA" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0vK-05-Q2h">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Glue" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0vK-05-Q2h">
                                             <rect key="frame" x="20" y="11" width="144" height="22"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="144" id="4ws-Sv-4js"/>
                                                 <constraint firstAttribute="height" constant="22" id="XNH-8t-XMc"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBlack" family="Helvetica Neue" pointSize="25"/>
-                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            <color key="textColor" red="0.0" green="0.50196081399917603" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.79734205160000005" green="0.79734205160000005" blue="0.79734205160000005" alpha="0.0" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="0vK-05-Q2h" firstAttribute="leading" secondItem="CxX-NP-r1p" secondAttribute="leading" constant="20" id="FJo-nR-9Gb"/>
                                     <constraint firstItem="0vK-05-Q2h" firstAttribute="centerY" secondItem="CxX-NP-r1p" secondAttribute="centerY" id="hYP-c6-G2T"/>
+                                </constraints>
+                            </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="feed" id="hyk-Kk-IAB">
+                                <rect key="frame" x="0.0" y="66" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hyk-Kk-IAB" id="ecc-Ou-ERC">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="news.png" translatesAutoresizingMaskIntoConstraints="NO" id="SNw-Ud-mfi">
+                                            <rect key="frame" x="20" y="3" width="38" height="38"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="Feed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g0S-lQ-Sae">
+                                            <rect key="frame" x="66" y="11" width="144" height="22"/>
+                                            <color key="backgroundColor" red="0.79734205160000005" green="0.79734205160000005" blue="0.79734205160000005" alpha="0.0" colorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="144" id="edZ-Wr-BCa"/>
+                                                <constraint firstAttribute="height" constant="22" id="q77-8h-a9f"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="Helvetica-Light" family="Helvetica" pointSize="18"/>
+                                            <color key="textColor" red="0.50196081399917603" green="0.50196081399917603" blue="0.50196081399917603" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.79734205160000005" green="0.79734205160000005" blue="0.79734205160000005" alpha="0.050000000000000003" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="g0S-lQ-Sae" firstAttribute="leading" secondItem="hyk-Kk-IAB" secondAttribute="leading" constant="20" id="ISA-Wb-oCd"/>
+                                    <constraint firstItem="g0S-lQ-Sae" firstAttribute="centerY" secondItem="hyk-Kk-IAB" secondAttribute="centerY" id="Mpu-2H-0Ru"/>
                                 </constraints>
                             </tableViewCell>
                         </prototypes>
@@ -572,6 +603,7 @@
     </scenes>
     <resources>
         <image name="menu.png" width="28" height="20"/>
+        <image name="news.png" width="1024" height="1024"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
